--- a/src/index.html
+++ b/src/index.html
@@ -11,28 +11,9 @@
 		<script src="https://kit.fontawesome.com/dad56601c0.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
+		<h1>Only webpack's</h1>
 
-		<div class="todo-div" >
-			<ul>
-			<li class="todo-item"> 
-				<span class="todo-heading"> Today's To Do</span>
-				<i class="fa-solid fa-arrows-rotate"></i>
-				
-				
-			</li>
-			<li class="add-item">
-				<input id='new-todo-input' class="todo-input" type="text" placeholder="Add to your list..."/>
-				<button id="add-button" class="add-button"> <i class="fa-solid fa-plus fa-lg"></i></button>
-			</li>
-		</ul>
-			<ul class id="todo-container">
 		
-			</ul>
-			<div class="clear-div">
-				<button class="button clear-button" id="clear-completed-button">Clear All Completed</button>
-			</div>
-
-		</div>
 		
 		<script src="" async defer></script>
 	</body>
