--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,20 @@
-
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title></title>
-		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="">
-		<script src="https://kit.fontawesome.com/dad56601c0.js" crossorigin="anonymous"></script>
-	</head>
-	<body>
-		<h1>Only webpack's</h1>
 
-		
-		
-		<script src="" async defer></script>
-	</body>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Leaderboard</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="">
+</head>
+
+<body>
+
+	
+
+	<script src="index.js" type="modules"></script>
+</body>
+
 </html>
