--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,39 @@
 
 <body>
 
+	<h1>Leaderboard</h1>
+<div id="outline">
+    <div id="score-section">
+        <span id="actions">
+            <h2>Recent scores</h2>
+            <button id="refresh">Refresh</button>
+        </span>
+        <div id="display-section">
+            <li>Name: 100</li>
+            <li>Name: 20</li>
+            <li>Name: 50</li>
+            <li>Name: 78</li>
+            <li>Name: 125</li>
+            <li>Name: 77</li>
+            <li>Name: 42</li>
+        </div>
+    </div>
+    <div class="adding-scores">
+        <h2>Add your scores</h2>
+        <form action="" id="form">
+            <ul>
+                <input type="text" name="name" id="name" placeholder="Your name">
+            </ul>
+            <ul>
+                <input type="text" id="scores" name="scores" placeholder="Your score">
+            </ul>
+            <ul>
+                <button id="submit" type="submit">Submit</button>
+            </ul>
+        </form>
+    </div>
+</div>
+
 	
 
 	<script src="index.js" type="modules"></script>
